--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -3,8 +3,8 @@
 # vagrant plugins required:
 # vagrant-berkshelf, vagrant-omnibus, vagrant-hosts
 Vagrant.configure("2") do |config|
-  config.vm.box = "Official Ubuntu 12.04 daily Cloud Image amd64 (VirtualBox 4.1.12)"
-  config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/precise/current/precise-server-cloudimg-amd64-vagrant-disk1.box"
+  config.vm.box = "Official Ubuntu 13.04 daily Cloud Image amd64 (No Guest Additions)"
+  config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
 
   # enable plugins
   config.berkshelf.enabled = true
@@ -21,6 +21,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision :hosts do |provisioner|
     provisioner.add_host private_ip , [ config.vm.hostname ]
   end
+
   # for mesos web UI.
   config.vm.network :forwarded_port, guest: 5050, host: 5050
 
@@ -32,27 +33,21 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision :shell do |s|
-        s.path = "scripts/populate_sshkey.sh"
-        s.args = "/home/vagrant vagrant"
+      s.path = "scripts/populate_sshkey.sh"
+      s.args = "/home/vagrant vagrant"
   end
 
   config.vm.provision :chef_solo do |chef|
 #    chef.log_level = :debug
-    chef.add_recipe "apt"
 #    chef.add_recipe "maven"
+    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
     chef.add_recipe "mesos"
-   chef.add_recipe "mesos::master"
-   chef.add_recipe "mesos::slave"
+    chef.add_recipe "mesos::master"
+    chef.add_recipe "mesos::slave"
+    chef.add_recipe "mesos::docker-executor"
 
     # You may also specify custom JSON attributes:
     chef.json = {
-      :java => {
-        'install_flavor' => "oracle",
-        'jdk_version' => "6",
-        'oracle' => {
-          'accept_oracle_download_terms' => true
-        }
-      },
       :maven => {
         :version => "3",
         "3" => {
@@ -65,7 +60,6 @@ Vagrant.configure("2") do |config|
       :mesos => {
         :type         => "mesosphere",
         :cluster_name => "MyCluster",
-        :home         => "/home/vagrant",
         :master_ips => ["localhost"],
         :slave_ips  => ["localhost"],
         :slave =>{
