--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # if you want to use vagrant-cachier,
   # please activate below.
-  config.cache.auto_detect = true
+#  config.cache.auto_detect = true
 
   # please customize hostname and private ip configuration if you needed.
   config.vm.hostname = "mesos"
@@ -38,16 +38,31 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision :chef_solo do |chef|
-#    chef.log_level = :debug
-#    chef.add_recipe "maven"
-    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
+    chef.log_level = :debug
     chef.add_recipe "mesos"
     chef.add_recipe "mesos::master"
     chef.add_recipe "mesos::slave"
-    chef.add_recipe "mesos::docker-executor"
+#    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
+#    chef.add_recipe "mesos::docker-executor"
+#    chef.add_recipe "maven"
 
     # You may also specify custom JSON attributes:
     chef.json = {
+      :mesos => {
+        :type         => "mesosphere",
+        :cluster_name => "MyCluster",
+        :master_ips => ["localhost"],
+        :slave_ips  => ["localhost"],
+        :master => {
+          :zk => "zk://localhost:2181/mesos"
+        },
+        :slave =>{
+          :master_url => "zk://localhost:2181/mesos",
+        },
+        :mesosphere => {
+          :with_zookeeper => true
+        }
+      },
       :maven => {
         :version => "3",
         "3" => {
@@ -55,18 +70,6 @@ Vagrant.configure("2") do |config|
         },
         :mavenrc => {
           :opts => "-Dmaven.repo.local=$HOME/.m2/repository -Xmx384m -XX:MaxPermSize=192m"
-        }
-      },
-      :mesos => {
-        :type         => "mesosphere",
-        :cluster_name => "MyCluster",
-        :master_ips => ["localhost"],
-        :slave_ips  => ["localhost"],
-        :slave =>{
-          :master_url => "#{private_ip}:5050",
-        },
-        :mesosphere => {
-          :with_zookeeper => true
         }
       }
     }
