--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -1,7 +1,7 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 # vagrant plugins required:
-# vagrant-berkshelf, vagrant-omnibus, vagrant-hosts
+# vagrant-berkshelf, vagrant-omnibus, vagrant-hosts, vagrant-cachier
 Vagrant.configure("2") do |config|
   config.vm.box = "Official Ubuntu 13.04 daily Cloud Image amd64 (No Guest Additions)"
   config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # if you want to use vagrant-cachier,
   # please activate below.
-#  config.cache.auto_detect = true
+  config.cache.auto_detect = true
 
   # please customize hostname and private ip configuration if you needed.
   config.vm.hostname = "mesos"
@@ -24,6 +24,8 @@ Vagrant.configure("2") do |config|
 
   # for mesos web UI.
   config.vm.network :forwarded_port, guest: 5050, host: 5050
+  # for marathon web UI.
+  config.vm.network :forwarded_port, guest: 8080, host: 8080
 
   config.vm.provider :virtualbox do |vb|
     vb.name = 'cookbook-mesos-sample-mesosphere'
@@ -42,8 +44,12 @@ Vagrant.configure("2") do |config|
     chef.add_recipe "mesos"
     chef.add_recipe "mesos::master"
     chef.add_recipe "mesos::slave"
+
+    # mesos-docker executor
 #    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
 #    chef.add_recipe "mesos::docker-executor"
+
+    # for marathon framework
 #    chef.add_recipe "maven"
 
     # You may also specify custom JSON attributes:
@@ -57,7 +63,7 @@ Vagrant.configure("2") do |config|
           :zk => "zk://localhost:2181/mesos"
         },
         :slave =>{
-          :master_url => "zk://localhost:2181/mesos",
+          :master_url => "zk://localhost:2181/mesos"
         },
         :mesosphere => {
           :with_zookeeper => true
@@ -74,5 +80,15 @@ Vagrant.configure("2") do |config|
       }
     }
   end
+
+# marathon install script
+#  script = <<SCRIPT
+#  wget https://github.com/mesosphere/marathon/archive/marathon-0.2.1.zip
+#  unzip marathon-0.2.1.zip
+#  cd marathon-marathon-0.2.1
+#  mvn package
+#  ./bin/start --master zk://localhost:2181/mesos  --zk_hosts localhost:2181 &
+# SCRIPT
+#  config.vm.provision "shell", inline: script
 
 end
