--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,6 +13,9 @@ platforms:
   - name: ubuntu-12.04
     run_list:
       - recipe[apt]
+    attributes:
+      java:
+        jdk_version: 7
 
 suites:
   - name: default
