Add integration tests for slave recipe using mesosphere
Actually needed a few changes to both `slave` and `mesosphere` recipes:

* Install `libcurl3` package in `mesosphere` recipe as it was needed to
get dpkg to actually install mesos, otherwise it would complain about
dependency requirements that weren't met.
* Use Chef::Application.fatal! as Chef::Log.fatal! doesn't exist in
newer versions of chef, though I think Chef::Application.fatal! exist
in older versions of chef. I'm not sure about this at all.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -18,9 +18,11 @@ platforms:
         jdk_version: 7
 
 suites:
-  - name: default
+  - name: mesosphere_slave
     run_list:
-      - recipe[mesos::default]
+      - recipe[mesos::slave]
     attributes:
-      java:
-        jdk_version: 7
+      mesos:
+        type: mesosphere
+        slave:
+          master: test-master
