--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,3 +26,13 @@ suites:
         type: mesosphere
         slave:
           master: test-master
+  - name: mesosphere_master
+    run_list:
+      - recipe[mesos::master]
+    attributes:
+      mesos:
+        type: mesosphere
+        master:
+          zk: test-master
+        master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
+        slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
