Add integration tests for master recipe when building mesos from source

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -36,3 +36,13 @@ suites:
           zk: test-master
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
+  - name: source_master
+    run_list:
+      - recipe[mesos::master]
+    attributes:
+      mesos:
+        type: source
+        master:
+          zk: test-master
+        master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
+        slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
