--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,12 +20,17 @@ platforms:
 suites:
   - name: mesosphere_slave
     run_list:
+      # master recipe is only for asserting mesos-slave healthy startup.
+      - recipe[mesos::master]
       - recipe[mesos::slave]
     attributes:
       mesos:
         type: mesosphere
         slave:
-          master: test-master
+          master: 'zk://localhost:2181/mesos'
+        # these keys below are only for master configurations.
+        master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
+        slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
         mesosphere:
           with_zookeeper: true
   - name: mesosphere_master
@@ -37,7 +42,7 @@ suites:
         mesosphere:
           with_zookeeper: true
         master:
-          zk: test-master
+          zk: 'zk://localhost:2181/mesos'
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
   - name: source_master
