rename master_or_slave to role, remove duplicated test and fix some spacing, which @mthssdrbrg comemnted.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -61,8 +61,10 @@ suites:
     attributes:
       mesos:
         type: source
+        master:
+          ip: 127.0.0.1
         slave:
-          master: localhost
+          master: 127.0.0.1:5050
         # these keys below are only for master configurations.
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
