--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -3,8 +3,8 @@
 # vagrant plugins required:
 # vagrant-berkshelf, vagrant-omnibus, vagrant-hosts, vagrant-cachier
 Vagrant.configure("2") do |config|
-  config.vm.box = "Official Ubuntu 13.04 daily Cloud Image amd64 (No Guest Additions)"
-  config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
+  config.vm.box = "Official Ubuntu 12.04 daily Cloud Image amd64 (No Guest Additions)"
+  config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/precise/current/precise-server-cloudimg-amd64-vagrant-disk1.box"
 
   # enable plugins
   config.berkshelf.enabled = true
@@ -46,8 +46,8 @@ Vagrant.configure("2") do |config|
     chef.add_recipe "mesos::slave"
 
     # mesos-docker executor
-#    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
-#    chef.add_recipe "mesos::docker-executor"
+    chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
+    chef.add_recipe "mesos::docker-executor"
 
     # for marathon framework
 #    chef.add_recipe "maven"
@@ -56,6 +56,7 @@ Vagrant.configure("2") do |config|
     chef.json = {
       :mesos => {
         :type         => "mesosphere",
+        :version      => "0.14.2",
         :mesosphere => {
           :with_zookeeper => true
         },
