--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -73,7 +73,7 @@ Vagrant.configure("2") do |config|
         # command line options for mesos-slave
         :slave =>{
           :master => "zk://localhost:2181/mesos",
-          :isolation => "cgroups",
+          :isolation => "process",  # mesos currently doesn't support cgroups isolation while using docker (see https://github.com/mesosphere/mesos-docker/issues/5)
           :log_dir => "/var/log/mesos",
           :work_dir => "/var/run/work"
         },
