--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -16,6 +16,12 @@ platforms:
     attributes:
       java:
         jdk_version: 7
+  - name: ubuntu-14.04
+    run_list:
+      - recipe[apt]
+    driver_config:
+      box: opscode-ubuntu-14.04
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
 
 suites:
   - name: mesosphere_master
