clean up config

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,6 +34,7 @@ suites:
           with_zookeeper: true
         master:
           zk: 'zk://localhost:2181/mesos'
+          quorum: 1
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
   - name: mesosphere_slave
@@ -57,6 +58,8 @@ suites:
     attributes:
       mesos:
         type: source
+        master:
+          quorum: 1
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
   - name: source_slave
