--- a/example/mesosphere/Vagrantfile
+++ b/example/mesosphere/Vagrantfile
@@ -39,6 +39,9 @@ Vagrant.configure("2") do |config|
       s.args = "/home/vagrant vagrant"
   end
 
+  # mesos-master doesn't create its work_dir.
+  config.vm.provision :shell, :inline => "mkdir -p /tmp/mesos"
+
   config.vm.provision :chef_solo do |chef|
     # chef.log_level = :debug
     chef.add_recipe "mesos"
@@ -53,9 +56,6 @@ Vagrant.configure("2") do |config|
     chef.add_recipe "docker"     # workaround : include_recipe in docker-executor recipe doesn't work
     chef.add_recipe "mesos::docker-executor"
 
-    # for marathon framework
-#    chef.add_recipe "maven"
-
     # You may also specify custom JSON attributes:
     chef.json = {
       :mesos => {
@@ -67,7 +67,8 @@ Vagrant.configure("2") do |config|
         :master => {
           :zk => "zk://localhost:2181/mesos",
           :log_dir => "/var/log/mesos",
-          :cluster => "MyCluster"
+          :cluster => "MyCluster",
+          :quorum  => "1"
         },
         # command line options for mesos-slave
         :slave =>{
@@ -79,15 +80,6 @@ Vagrant.configure("2") do |config|
         # below ip lists are for meoss-[start|stop]-cluster.sh
         :master_ips => ["localhost"],
         :slave_ips  => ["localhost"]
-      },
-      :maven => {
-        :version => "3",
-        "3" => {
-          :version => "3.0.5"
-        },
-        :mavenrc => {
-          :opts => "-Dmaven.repo.local=$HOME/.m2/repository -Xmx384m -XX:MaxPermSize=192m"
-        }
       }
     }
   end
