--- a/example/source/Vagrantfile
+++ b/example/source/Vagrantfile
@@ -3,8 +3,8 @@
 # vagrant plugins required:
 # vagrant-berkshelf, vagrant-omnibus, vagrant-hosts
 Vagrant.configure("2") do |config|
-  config.vm.box = "Official Ubuntu 13.04 daily Cloud Image amd64 (No Guest Additions)"
-  config.vm.box_url = "https://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
+  config.vm.box = "Official Ubuntu 14.04 daily Cloud Image amd64 (Development release,  No Guest Additions)"
+  config.vm.box_url = "https://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box"
 
   # enable plugins
   config.berkshelf.enabled = true
@@ -39,6 +39,9 @@ Vagrant.configure("2") do |config|
   # mesos-master doesn't create its work_dir.
   config.vm.provision :shell, :inline => "mkdir -p /tmp/mesos"
 
+  # Mesos master depends on zookeeper emsamble since 0.19.0
+  config.vm.provision :shell, :inline => "apt-get update && apt-get install -y zookeeper zookeeperd zookeeper-bin"
+
   config.vm.provision :chef_solo do |chef|
 #    chef.log_level = :debug
     chef.add_recipe "mesos"
@@ -64,18 +67,24 @@ Vagrant.configure("2") do |config|
         }
       },
       :mesos => {
-        :cluster_name => "MyCluster",
         :home         => "/home/vagrant",
-        :master_ips => ["localhost"],
-        :slave_ips  => ["localhost"],
-        :slave => {
-          :master_url => "#{private_ip}:5050",
-          :isolation => "process"
-        },
+        # command line options for mesos-master
         :master => {
-          :ip => "#{private_ip}",
-          :quorum => "1"
-        }
+          :zk => "zk://localhost:2181/mesos",
+          :log_dir => "/var/log/mesos",
+          :cluster => "MyCluster",
+          :quorum  => "1"
+        },
+        # command line options for mesos-slave
+        :slave =>{
+          :master => "zk://localhost:2181/mesos",
+          :isolation => "process",  # mesos currently doesn't support cgroups isolation while using docker (see https://github.com/mesosphere/mesos-docker/issues/5)
+          :log_dir => "/var/log/mesos",
+          :work_dir => "/var/run/work"
+        },
+        # below ip lists are for meoss-[start|stop]-cluster.sh
+        :master_ips => ["localhost"],
+        :slave_ips  => ["localhost"]
       }
     }
   end
