--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,18 +1,27 @@
 ---
 driver:
-  name: docker
-  binary: docker
-  socket: <%= ENV.fetch('DOCKER_HOST', 'unix:///var/run/docker.sock') %>
+  name: vagrant
+  customize:
+    memory: 2048
+    cpus: 2
+    ioapic: 'on'
 
 provisioner:
   name: chef_solo
 
 platforms:
+  - name: ubuntu-13.04
+    run_list:
+      - recipe[apt]
+    attributes:
+      java:
+        jdk_version: 7
   - name: ubuntu-14.04
     run_list:
       - recipe[apt]
     driver_config:
-      image: "ubuntu:14.04"
+      box: opscode-ubuntu-14.04
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
 
 suites:
   - name: mesosphere_master
@@ -36,34 +45,24 @@ suites:
     attributes:
       mesos:
         type: mesosphere
-        mesosphere:
-          with_zookeeper: true
-        master:
-          zk: 'zk://localhost:2181/mesos'
-          quorum: 1
         slave:
           master: 'zk://localhost:2181/mesos'
         # these keys below are only for master configurations.
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
+        mesosphere:
+          with_zookeeper: true
   - name: source_master
-    driver_config:
-      # zookeeper is only for asserting mesos-master healthy startup.
-      provision_command: "apt-get update && apt-get install -y zookeeper zookeeperd zookeeper-bin"
     run_list:
       - recipe[mesos::master]
     attributes:
       mesos:
         type: source
         master:
-          zk: 'zk://localhost:2181/mesos'
           quorum: 1
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
   - name: source_slave
-    driver_config:
-      # zookeeper is only for asserting mesos-master healthy startup.
-      provision_command: "apt-get update && apt-get install -y zookeeper zookeeperd zookeeper-bin"
     run_list:
       # master recipe is only for asserting mesos-slave healthy startup.
       - recipe[mesos::master]
@@ -72,10 +71,9 @@ suites:
       mesos:
         type: source
         master:
-          zk: 'zk://localhost:2181/mesos'
-          quorum: 1
+          ip: 127.0.0.1
         slave:
-          master: 'zk://localhost:2181/mesos'
+          master: 127.0.0.1:5050
         # these keys below are only for master configurations.
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
         slave_ips:  ['11.0.0.1', '11.0.0.2', '11.0.0.3']
