--- a/example/source/Vagrantfile
+++ b/example/source/Vagrantfile
@@ -6,6 +6,8 @@ Vagrant.configure("2") do |config|
   config.vm.box = "Official Ubuntu 14.04 daily Cloud Image amd64 (Development release,  No Guest Additions)"
   config.vm.box_url = "https://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box"
 
+#  config.vm.box = "chef/centos-6.5"
+
   # enable plugins
   config.berkshelf.enabled = true
   config.omnibus.chef_version = :latest
@@ -28,7 +30,7 @@ Vagrant.configure("2") do |config|
     vb.name = 'cookbook-mesos-sample-source'
     # Use VBoxManage to customize the VM. For example to change memory:
     vb.customize ["modifyvm", :id, "--memory", "#{1024*4}"]
-#    vb.customize ["modifyvm", :id,  "--cpus",  "2"]
+    vb.customize ["modifyvm", :id,  "--cpus",  "2"]
   end
 
   config.vm.provision :shell do |s|
@@ -40,7 +42,18 @@ Vagrant.configure("2") do |config|
   config.vm.provision :shell, :inline => "mkdir -p /tmp/mesos"
 
   # Mesos master depends on zookeeper emsamble since 0.19.0
+  # for Ubuntu
   config.vm.provision :shell, :inline => "apt-get update && apt-get install -y zookeeper zookeeperd zookeeper-bin"
+  # For CentOS
+  # config.vm.provision :shell, :inline => <<-EOH
+  #   rpm -Uvh http://archive.cloudera.com/cdh4/one-click-install/redhat/6/x86_64/cloudera-cdh-4-0.x86_64.rpm
+  #   yum install -y -q curl
+  #   curl -sSfL http://archive.cloudera.com/cdh4/redhat/6/x86_64/cdh/RPM-GPG-KEY-cloudera --output /tmp/cdh.key
+  #   rpm --import /tmp/cdh.key
+  #   yum install -y -q java-1.7.0-openjdk zookeeper zookeeper-server
+  #   service zookeeper-server init
+  #   service zookeeper-server start
+  # EOH
 
   config.vm.provision :chef_solo do |chef|
 #    chef.log_level = :debug
@@ -51,11 +64,8 @@ Vagrant.configure("2") do |config|
     # You may also specify custom JSON attributes:
     chef.json = {
       :java => {
-        'install_flavor' => "oracle",
-        'jdk_version' => "6",
-        'oracle' => {
-          'accept_oracle_download_terms' => true
-        }
+        'install_flavor' => "openjdk",
+        'jdk_version' => "7",
       },
       :maven => {
         :version => "3",
@@ -78,7 +88,7 @@ Vagrant.configure("2") do |config|
         # command line options for mesos-slave
         :slave =>{
           :master => "zk://localhost:2181/mesos",
-          :isolation => "process",  # mesos currently doesn't support cgroups isolation while using docker (see https://github.com/mesosphere/mesos-docker/issues/5)
+          :isolation => "posix/cpu,posix/mem",
           :log_dir => "/var/log/mesos",
           :work_dir => "/var/run/work"
         },
