--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -46,6 +46,8 @@ suites:
       mesos:
         type: mesosphere
         slave:
+          attributes:
+            rackid: us-east-1b
           master: 'zk://localhost:2181/mesos'
         # these keys below are only for master configurations.
         master_ips: ['10.0.0.1', '10.0.0.2', '10.0.0.3']
