--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,9 +17,12 @@ platforms:
     attributes:
       java:
         jdk_version: 7
+
   - name: ubuntu-14.04
     run_list:
       - recipe[apt]
+
+  - name: centos-6.6
 
 suites:
   - name: mesosphere_master
