Drop script in favor of Rake for Travis testing
Travis has built in, native support for Bundler and Rake, so let’s
take advantage!

* Replace the script w/ a Rakefile using Rspec’s Rake tasks
* Cache the bundled gems on Travis
* Drop testing on old and bleeding edge versions of Ruby

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: ruby
-script: ./travis-test.sh
+bundler_args: --deployment --jobs=3 --retry=3
+cache: bundler
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
-  - ruby-head
-matrix:
-  allow_failures:
-    - rvm: ruby-head
+  - 2.1
+script:
+  - bundle exec rake spec
