Ensure source_slave suite has necessary attribute
Without this value, the Serverspec tests that have been defined fail
b/c they expect this attribute to be present, as it is in the
mesosphere_slave suite.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -93,6 +93,8 @@ suites:
           ip: 127.0.0.1
           quorum: 1
         slave:
+          attributes:
+            rackid: us-east-1b
           master: 127.0.0.1:5050
         # these keys below are only for master configurations.
         master_ips:
